# gyrus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  benchmark_models.py  eval_prompts.py  ingest.py  install.ps1  install.sh  pyproject.toml  storage.py  storage_notion.py  test_gyrus.py  uninstall.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  test.yml
docs/: _redirects  index.html  install  uninstall
skills/claude-code/: gyrus.md
skills/codex/: gyrus-instructions.md
skills/cowork/gyrus/: SKILL.md
