[project]
name = "gyrus"
version = "0.3.6"
description = "Your AI tools don't talk to each other. Gyrus fixes that."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Prismind Analytics", email = "hello@prismindanalytics.com"},
]
keywords = ["ai", "knowledge-base", "developer-tools", "llm", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]

# Zero external dependencies — stdlib only
dependencies = []

[project.urls]
Homepage = "https://gyrus.sh"
Repository = "https://github.com/prismindanalytics/gyrus"
Issues = "https://github.com/prismindanalytics/gyrus/issues"

[project.scripts]
gyrus = "ingest:main"

[tool.setuptools]
py-modules = ["ingest", "storage", "storage_notion", "eval_prompts"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
